package collisions;

import colliders.enemies.ShellEnemyCollider;

public interface ShellEnemyCollision extends EnemyCollision{
    public ShellEnemyCollider getCollider();
}
